# mokume

./: .gitignore  MANIFEST.in  README.md  environment.yaml  pyproject.toml  requirements.txt
.github/workflows/: conda-publish.yml  python-app.yml  python-publish.yml
benchmarks/: README.md  mokume-batch-correction-example.ipynb
mokume/: __init__.py  mokume_cli.py
mokume/commands/: __init__.py  batch_correct.py  features2peptides.py  features2proteins.py  peptides2protein.py  visualize.py
mokume/core/: __init__.py  constants.py  logger.py  logging_config.py  write_queue.py
mokume/data/: __init__.py  organisms.py
mokume/imputation/: __init__.py  methods.py
mokume/io/: __init__.py  fasta.py  parquet.py
mokume/model/: __init__.py  batch_correction.py  filters.py  labeling.py  normalization.py  organism.py  quantification.py  summarization.py
mokume/normalization/: __init__.py  feature.py  hierarchical.py  peptide.py  protein.py
mokume/pipeline/: __init__.py  features_to_proteins.py
mokume/plotting/: __init__.py  distributions.py  pca.py
mokume/postprocessing/: __init__.py  batch_correction.py  combiner.py  reshape.py
mokume/preprocessing/: __init__.py
mokume/preprocessing/filters/: __init__.py  base.py  enums.py  factory.py  intensity.py  io.py  peptide.py  pipeline.py  protein.py  run_qc.py
mokume/quantification/: __init__.py  all_peptides.py  base.py  directlfq.py  ibaq.py  maxlfq.py  top3.py  topn.py
mokume/summarization/: __init__.py  base.py  mean.py  median.py  sum.py
recipe/: meta.yaml
tests/: test_batch_correction.py  test_batch_correction_integration.py  test_file_utils.py  test_filter_configs.py  test_hierarchical_normalization.py  test_ibaqpy.py  test_ibaqpy_postprocessing.py  test_peptide_normalize.py  test_quantification_accuracy.py
tests/example/: PXD017834-peptides-norm.csv  PXD017834-peptides-norm.parquet  PXD020192.sdrf.tsv  feature_wide.parquet  ibaq_corrected_combined.h5ad
tests/example/filters/: basic_qc.yaml  dia_analysis.yaml  exploratory_analysis.yaml  stringent_filtering.yaml  (+1 more)
